@@ -4,11 +4,17 @@
  */
 package service;
 
-import java.io.IOException;
-import java.io.OutputStream;
-import java.net.HttpURLConnection;
-import java.net.URL;
-import util.AppConstants;
+import com.google.gson.Gson;
+import payload.LogPayload;
+import static utils.AppConstants.WebhookConstants.*;
+
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.net.URI;
+import java.util.UUID;
+import payload.Payload;
+import payload.RankPayload;
 
 /**
  *
@@ -17,62 +23,103 @@ import util.AppConstants;
 public class WebhookServiceImpl implements IWebhookService {
 
     @Override
-    public void sendWebhookLogs(String ip, String username, String alias, int code, String message) {
-        HttpURLConnection conn = null;
+    public void sendExamLogs(LogPayload payload) {
         try {
-            URL url = new URL(AppConstants.WEBHOOK_LOG_ENDPOINT);
-            conn = (HttpURLConnection) url.openConnection();
-            conn.setRequestMethod("POST");
-            conn.setRequestProperty("Content-Type", "application/json");
-            conn.setDoOutput(true);
-            message = ip + " | " + username + " >>> " + alias + ": Trạng thái: " + code + ", " + message;
-            try (OutputStream os = conn.getOutputStream()) {
-                byte[] input = message.getBytes("utf-8");
-                os.write(input, 0, input.length);
-            }
+            Gson gson = new Gson();
+            HttpClient client = HttpClient.newHttpClient();
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create(WEBHOOK_EXAM_LOG_ENDPOINT)) // Webhook URL
+                    .header("Content-Type", "application/json")
+                    .header("Secret-Token", WEBHOOK_TOKEN)
+                    .POST(HttpRequest.BodyPublishers.ofString(gson.toJson(payload)))
+                    .build();
 
-            int responseCode = conn.getResponseCode();
-            if (responseCode == HttpURLConnection.HTTP_OK) {
-                System.out.println("Webhook sent successfully.");
-            } else {
-                System.out.println("Failed to send webhook. Response code: " + responseCode);
-            }
-        } catch (IOException e) {
-            System.out.println("Cannot connect to Spring Boot server");
-        } finally {
-            if (conn != null) {
-                conn.disconnect();
-            }
+            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+
+            System.out.println("Response from Spring Boot: " + response.body());
+        } catch (Exception e) {
+            e.printStackTrace();
         }
     }
 
     @Override
-    public void sendWebhookUpdateScoreBoard(Long userId) {
-        HttpURLConnection conn = null;
+    public void sendUpdateLeaderBoard(RankPayload payload) {
         try {
-            URL url = new URL(AppConstants.WEBHOOK_SCOREBOARD_ENDPOINT);
-            conn = (HttpURLConnection) url.openConnection();
-            conn.setRequestMethod("POST");
-            conn.setRequestProperty("Content-Type", "application/json");
-            conn.setDoOutput(true);
+            Gson gson = new Gson();
+            HttpClient client = HttpClient.newHttpClient();
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create(WEBHOOK_LEADER_BOARD_ENDPOINT)) // Webhook URL
+                    .header("Content-Type", "application/json")
+                    .header("Secret-Token", WEBHOOK_TOKEN)
+                    .POST(HttpRequest.BodyPublishers.ofString(gson.toJson(payload)))
+                    .build();
 
-            try (OutputStream os = conn.getOutputStream()) {
-                byte[] input = (userId+"").getBytes("UTF-8");
-                os.write(input, 0, input.length);
-            }
+            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
 
-            int responseCode = conn.getResponseCode();
-            if (responseCode == HttpURLConnection.HTTP_OK) {
-                System.out.println("Webhook update scoreboard sent successfully.");
-            } else {
-                System.out.println("Failed to send webhook update scoreboard. Response code: " + responseCode);
-            }
-        } catch (IOException e) {
-            // TODO: handle
-        } finally {
-            if (conn != null) {
-                conn.disconnect();
-            }
+            System.out.println("Response from Spring Boot: " + response.body());
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+    }
+//    @Override
+//    public void sendRequestToUpdateExamRank(Payload payload, Long contestId, Long contestUserId) {
+//        HttpURLConnection conn = null;
+//        try {
+//            URL url = new URL(WEBHOOK_CONTEST_SCOREBOARD_ENDPOINT);
+//            conn = (HttpURLConnection) url.openConnection();
+//            conn.setRequestMethod("POST");
+//            conn.setRequestProperty("Content-Type", "application/json");
+//            conn.setRequestProperty("Secret-token", WEBHOOK_TOKEN);
+//            conn.setDoOutput(true);
+//            ExamRankPayload contestScoreBoardPayload = new ExamRankPayload(payload, contestId, contestUserId);
+//            try (OutputStream os = conn.getOutputStream()) {
+//                byte[] input = contestScoreBoardPayload.toJson().getBytes("UTF-8");
+//                os.write(input, 0, input.length);
+//            }
+//
+//            int responseCode = conn.getResponseCode();
+//            if (responseCode == HttpURLConnection.HTTP_OK) {
+//                System.out.println("CONTEST SCOREBOARD: Webhook update scoreboard sent successfully.");
+//            } else {
+//                System.out.println("CONTEST SCOREBOARD:Failed to send webhook update scoreboard. Response code: " + responseCode);
+//            }
+//        } catch (IOException e) {
+//            // TODO: handle
+//        } finally {
+//            if (conn != null) {
+//                conn.disconnect();
+//            }
+//        }
+//    }
+
+    public void test() {
+        try {
+            // Sử dụng HTTP client để gửi dữ liệu tới Spring Boot
+            HttpClient client = HttpClient.newHttpClient();
+            LogPayload payload = new LogPayload(
+                    "username",
+                    "client-info",
+                    "alias-name",
+                    0,
+                    0,
+                    "processlog",
+                    UUID.fromString("ed226ef1-0e45-408d-b5b0-6042fe15a3b9"),
+                    UUID.fromString("ed226ef1-0e45-408d-b5b0-6042fe15a3b9"),
+                    UUID.fromString("ed226ef1-0e45-408d-b5b0-6042fe15a3b9")
+            );
+//            System.out.println(payload.toJson());
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create("http://localhost:8080/v1/api/webhook/exam/logs")) // Webhook URL
+                    .header("Content-Type", "application/json")
+                    .header("Secret-Token", WEBHOOK_TOKEN)
+                    .POST(HttpRequest.BodyPublishers.ofString(""))
+                    .build();
+
+            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+
+            System.out.println("Response from Spring Boot: " + response.body());
+        } catch (Exception e) {
+            e.printStackTrace();
         }
     }
 
